<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_preview_recorded_audio">

        <RelativeLayout
            android:id="@+id/rl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_preview_recorded_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_preview_recorded_audio"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/ib_close_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/transparent"
                        android:tint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                    <TextView
                        android:id="@+id/tv_submit_voice_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/update_post"
                        android:textColor="@color/main_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_close_dialog" />

                    <EditText
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="top|left"
                        android:hint="@string/add_text"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:maxLines="6"
                        android:minHeight="50dp"
                        android:minLines="6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_submit_voice_note" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/play_note_card"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:background="#f2f3f5"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="14dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/postImage"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/round_outline"
                                android:src="@drawable/com_facebook_profile_picture_blank_portrait"
                                android:scaleType="fitXY" />

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:id="@+id/cardView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="2dp"
                        app:layout_constraintVertical_bias="0.88"
                        android:layout_marginBottom="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/play_note_card"
                        >

                        <TextView
                            android:id="@+id/btn_attach_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawableEnd="@drawable/ic_attach_image"
                            android:drawableRight="@drawable/ic_attach_image"
                            android:padding="16dp"
                            android:text="@string/change_add_image"
                            android:textStyle="normal" />

                    </android.support.v7.widget.CardView>

                </android.support.constraint.ConstraintLayout>


            </android.support.constraint.ConstraintLayout>


        </RelativeLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btnUpdatePost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_text_view_normal"
            android:minWidth="140dp"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:finalCornerAngle="50dp"
            app:initialCornerAngle="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:spinning_bar_color="@android:color/white"
            app:spinning_bar_padding="8dp"
            app:spinning_bar_width="4dp" />

    </android.support.constraint.ConstraintLayout>


</layout>